// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemBankContainer default wrapper 1`] = `
<ItemBankContainer
  aboutItemRevisionClient={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "bankKey": 3000,
            "isaap": "",
            "itemKey": 187,
            "revision": "asfe",
            "section": "math",
            "valid": false,
          },
        ],
      ],
    }
  }
  accessibilityClient={[MockFunction]}
  getUrl={[MockFunction]}
  itemViewUrl="hello"
  items={
    Array [
      Object {
        "bankKey": 3000,
        "isaap": "",
        "itemKey": 187,
        "revision": "asfe",
        "section": "math",
        "valid": false,
      },
      Object {
        "bankKey": 2332,
        "isaap": "",
        "itemKey": 187,
        "revision": "asdf",
        "section": "math",
      },
    ]
  }
  revisionsClient={
    [MockFunction] {
      "calls": Array [
        Array [
          Object {
            "bankKey": 3000,
            "isaap": "",
            "itemKey": 187,
            "revision": "asfe",
            "section": "math",
            "valid": false,
          },
        ],
      ],
    }
  }
  sectionsClient={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
    }
  }
>
  <div
    className="item-container container"
  >
    <div>
      <ItemBankViewer
        currentItem={
          Object {
            "bankKey": 3000,
            "isaap": "",
            "itemKey": 187,
            "revision": "asfe",
            "section": "math",
            "valid": false,
          }
        }
        itemUrl="hello"
        items={
          Array [
            Object {
              "bankKey": 3000,
              "isaap": "",
              "itemKey": 187,
              "revision": "asfe",
              "section": "math",
              "valid": false,
            },
            Object {
              "bankKey": 2332,
              "isaap": "",
              "itemKey": 187,
              "revision": "asdf",
              "section": "math",
            },
          ]
        }
        nextItem={
          Object {
            "bankKey": 2332,
            "isaap": "",
            "itemKey": 187,
            "revision": "asdf",
            "section": "math",
          }
        }
        onAccessibilityReset={[Function]}
        onAccessibilityUpdate={[Function]}
        onDirectionSelect={[Function]}
        onItemSelect={[Function]}
        onRevisionSelect={[Function]}
      >
        <div
          className="section revisions-items"
        >
          <RevisionContainer
            onRevisionSelect={[Function]}
            revisions={Array []}
          >
            <div
              className="revisions section section-light section-compact"
            >
              <h3
                className="revisions-header"
              >
                Revisions
              </h3>
              <ul />
            </div>
          </RevisionContainer>
          <div
            aria-live="polite"
            aria-relevant="additions"
            className="section item-map-iframe"
          >
            <div
              aria-label="Toolbar with button groups"
              className="item-nav"
              role="toolbar"
            >
              <div
                aria-label="First group"
                className="item-nav-left-group"
                role="group"
              />
              <div
                className="nav-buttons"
              >
                <button
                  className="btn btn-link previous"
                  disabled={true}
                  onClick={[Function]}
                >
                  <div
                    className="nav-button-container"
                  >
                    <span
                      aria-hidden="true"
                      className="fa fa-arrow-left"
                    />
                    <div
                      className="nav-item-name"
                    >
                      Previous
                    </div>
                  </div>
                </button>
                <Component
                  className="item-dropdown"
                  label="Items"
                  labelClass="display-none"
                  onChange={[Function]}
                  options={
                    Array [
                      Object {
                        "disabled": true,
                        "label": "Select an Item",
                        "selected": false,
                        "value": "N/A",
                      },
                      Object {
                        "label": "187",
                        "selected": false,
                        "value": "187",
                      },
                      Object {
                        "label": "187",
                        "selected": false,
                        "value": "187",
                      },
                    ]
                  }
                  selected="187"
                  wrapperClass="select-dd"
                >
                  <div
                    className="select-dd"
                  >
                    <label>
                      <span
                        className="display-none"
                      >
                        Items
                      </span>
                    </label>
                    <select
                      className="form-control item-dropdown"
                      onChange={[Function]}
                      value="187"
                    >
                      <Component
                        disabled={true}
                        key="N/A"
                        label="Select an Item"
                        selected={false}
                        value="N/A"
                      >
                        <option
                          aria-selected={false}
                          disabled={true}
                          label="Select an Item"
                          value="N/A"
                        >
                          Select an Item
                        </option>
                      </Component>
                      <Component
                        key="187"
                        label="187"
                        selected={false}
                        value="187"
                      >
                        <option
                          aria-selected={false}
                          label="187"
                          value="187"
                        >
                          187
                        </option>
                      </Component>
                      <Component
                        key="187"
                        label="187"
                        selected={false}
                        value="187"
                      >
                        <option
                          aria-selected={false}
                          label="187"
                          value="187"
                        >
                          187
                        </option>
                      </Component>
                    </select>
                  </div>
                </Component>
                <button
                  className="btn btn-link next"
                  disabled={false}
                  onClick={[Function]}
                >
                  <div
                    className="nav-button-container"
                  >
                    <span
                      aria-hidden="true"
                      className="fa fa-arrow-right"
                    />
                    <div
                      className="nav-item-name"
                    >
                      2332-187
                    </div>
                  </div>
                </button>
              </div>
              <div
                aria-label="Second group"
                className="item-nav-right-group"
                role="group"
              />
            </div>
            <ItemViewerFrame
              title="item viewer"
              url="hello"
            >
              <div
                className="itemViewerFrame"
                tabIndex={0}
              >
                <div
                  className="loader-icon"
                >
                  <div
                    className="loader"
                  />
                </div>
                <iframe
                  className="itemviewer-iframe"
                  id="itemviewer-iframe"
                  onLoad={[Function]}
                  onLoadStart={[Function]}
                  src="hello"
                  title="item viewer"
                />
              </div>
            </ItemViewerFrame>
          </div>
        </div>
      </ItemBankViewer>
    </div>
  </div>
</ItemBankContainer>
`;

exports[`ItemBankContainer has item bank viewer 1`] = `
<ItemBankViewer
  currentItem={
    Object {
      "bankKey": 3000,
      "isaap": "",
      "itemKey": 187,
      "revision": "asfe",
      "section": "math",
      "valid": false,
    }
  }
  itemUrl="hello"
  items={
    Array [
      Object {
        "bankKey": 3000,
        "isaap": "",
        "itemKey": 187,
        "revision": "asfe",
        "section": "math",
        "valid": false,
      },
      Object {
        "bankKey": 2332,
        "isaap": "",
        "itemKey": 187,
        "revision": "asdf",
        "section": "math",
      },
    ]
  }
  nextItem={
    Object {
      "bankKey": 2332,
      "isaap": "",
      "itemKey": 187,
      "revision": "asdf",
      "section": "math",
    }
  }
  onAccessibilityReset={[Function]}
  onAccessibilityUpdate={[Function]}
  onDirectionSelect={[Function]}
  onItemSelect={[Function]}
  onRevisionSelect={[Function]}
>
  <div
    className="section revisions-items"
  >
    <RevisionContainer
      onRevisionSelect={[Function]}
      revisions={Array []}
    >
      <div
        className="revisions section section-light section-compact"
      >
        <h3
          className="revisions-header"
        >
          Revisions
        </h3>
        <ul />
      </div>
    </RevisionContainer>
    <div
      aria-live="polite"
      aria-relevant="additions"
      className="section item-map-iframe"
    >
      <div
        aria-label="Toolbar with button groups"
        className="item-nav"
        role="toolbar"
      >
        <div
          aria-label="First group"
          className="item-nav-left-group"
          role="group"
        />
        <div
          className="nav-buttons"
        >
          <button
            className="btn btn-link previous"
            disabled={true}
            onClick={[Function]}
          >
            <div
              className="nav-button-container"
            >
              <span
                aria-hidden="true"
                className="fa fa-arrow-left"
              />
              <div
                className="nav-item-name"
              >
                Previous
              </div>
            </div>
          </button>
          <Component
            className="item-dropdown"
            label="Items"
            labelClass="display-none"
            onChange={[Function]}
            options={
              Array [
                Object {
                  "disabled": true,
                  "label": "Select an Item",
                  "selected": false,
                  "value": "N/A",
                },
                Object {
                  "label": "187",
                  "selected": false,
                  "value": "187",
                },
                Object {
                  "label": "187",
                  "selected": false,
                  "value": "187",
                },
              ]
            }
            selected="187"
            wrapperClass="select-dd"
          >
            <div
              className="select-dd"
            >
              <label>
                <span
                  className="display-none"
                >
                  Items
                </span>
              </label>
              <select
                className="form-control item-dropdown"
                onChange={[Function]}
                value="187"
              >
                <Component
                  disabled={true}
                  key="N/A"
                  label="Select an Item"
                  selected={false}
                  value="N/A"
                >
                  <option
                    aria-selected={false}
                    disabled={true}
                    label="Select an Item"
                    value="N/A"
                  >
                    Select an Item
                  </option>
                </Component>
                <Component
                  key="187"
                  label="187"
                  selected={false}
                  value="187"
                >
                  <option
                    aria-selected={false}
                    label="187"
                    value="187"
                  >
                    187
                  </option>
                </Component>
                <Component
                  key="187"
                  label="187"
                  selected={false}
                  value="187"
                >
                  <option
                    aria-selected={false}
                    label="187"
                    value="187"
                  >
                    187
                  </option>
                </Component>
              </select>
            </div>
          </Component>
          <button
            className="btn btn-link next"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="nav-button-container"
            >
              <span
                aria-hidden="true"
                className="fa fa-arrow-right"
              />
              <div
                className="nav-item-name"
              >
                2332-187
              </div>
            </div>
          </button>
        </div>
        <div
          aria-label="Second group"
          className="item-nav-right-group"
          role="group"
        />
      </div>
      <ItemViewerFrame
        title="item viewer"
        url="hello"
      >
        <div
          className="itemViewerFrame"
          tabIndex={0}
        >
          <div
            className="loader-icon"
          >
            <div
              className="loader"
            />
          </div>
          <iframe
            className="itemviewer-iframe"
            id="itemviewer-iframe"
            onLoad={[Function]}
            onLoadStart={[Function]}
            src="hello"
            title="item viewer"
          />
        </div>
      </ItemViewerFrame>
    </div>
  </div>
</ItemBankViewer>
`;

exports[`ItemBankContainer item bank entry 1`] = `null`;
